add_subdirectory(src)
target_include_directories(M2 PUBLIC ${kalman_INCLUDE_DIRS})
target_link_libraries(M2 ${kalman_LIBS}) 
target_include_directories(M2 PUBLIC ../A1/include)
target_link_libraries(M2 A1)
target_include_directories(M2 PUBLIC ../A2/include)
target_link_libraries(M2 A2)
find_package(OpenCV REQUIRED)
target_include_directories(M2 PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(M2 ${OpenCV_LIBS}) 
